# airfoils

./: .gitignore  pyproject.toml  setup.py
src/airfoils/: __version__.py  airfoils.py
